# AI8Video

./: .gitattributes  .gitignore  AI8video  AI8video.cmd  ARCHITECTURE.md  CONTRIBUTING.md  FONT_LICENSES.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  mykey_template.py  package-lock.json  package.json  pyproject.toml  start_ai8video_web.sh  双击启动.bat  双击启动.command
knowledge/: voice-support-server159.sql
licenses/: SourceHanSerif-OFL-1.1.txt
tests/: test_ai8video_agent_task_invariants.py  test_ai8video_agent_task_ledger.py  test_ai8video_agent_task_scheduler.py  test_ai8video_ai_script_splitter.py  test_ai8video_architecture.py  test_ai8video_asset_maintenance.py  test_ai8video_asset_store.py  test_ai8video_background_music.py  test_ai8video_batch_alert_store.py  test_ai8video_batch_report_store.py  test_ai8video_batch_seed_file.py  test_ai8video_bridge.py  test_ai8video_business_prompt.py  test_ai8video_chat_status.py  test_ai8video_config.py  test_ai8video_conversation_controller_ai_interpreter.py  test_ai8video_conversation_controller_batch.py  test_ai8video_conversation_controller_generation_summary.py  test_ai8video_daily_batch_supervisor.py  test_ai8video_default_reference_image.py  test_ai8video_default_script_reference.py  test_ai8video_generated_output_reviewer.py  test_ai8video_generation_mode.py  test_ai8video_generation_task_runner.py  test_ai8video_html_motion_overlay.py  test_ai8video_html_motion_tasks.py  test_ai8video_http_client.py  test_ai8video_hyperframes_overlay_harness.py  test_ai8video_hyperframes_worker.py  test_ai8video_identity.py  (+30 more)
(+217 files in other folders)
