# AI install hint: choose deps by OS/env + needed ui/bot. do NOT install all.
# minimal core first; missing packages can be installed on demand.

[project]
name = "ai8video"
version = "0.3.0"
description = "纯 Python 驱动的本地 AI 短视频批量工作台"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "bottle>=0.12",
    "psycopg[binary]>=3.3,<4",
]

[project.optional-dependencies]
ai8video = [
    "pillow>=9.0",
    "boto3>=1.34",
    "sherpa-onnx>=1.13",
    "faster-whisper>=1.2,<2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai8video*"]
namespaces = false

[tool.setuptools.package-data]
ai8video = [
    "interfaces/web/static/**/*",
    "media/*.json",
    "media/motion/*.cjs",
    "media/motion/*.js",
]

[project.scripts]
ai8video = "ai8video.interfaces.cli:main"
